[package]
name = "bms-utils"
version = "0.2.0"
edition = "2024"

license = "MIT OR Apache-2.0"
authors = ["Kirby0717 <niconicoyusei@gmail.com>"]
description = "BMSのファイル(.bms .bme .bml .pms .bmson)に関するライブラリ\nLibrary for BMS files. (.bms .bme .bml .pms .bmson)"
readme = "README.md"
repository = "https://github.com/Kirby0717/bms-utils"

[features]
default = ["bmson"]
bmson = ["dep:serde", "dep:serde_json", "dep:serde_repr"]

[dependencies]
log = "0.4"
num-traits = "0.2"
ordered-float = "5"
rand = "0.9"
#small_vec = "0.1"
winnow = "0.7"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
serde_repr = { version = "0.1", optional = true }
